# Big-Data-Programacion

./: pyproject.toml
Tema 1/Hadoop-master/: mapper.py
Tema 2/: DocumentDatabase.ipynb  KeyValueDatabase.ipynb
Tema 3/: Ejemplo_Eurocopa_Dataframe.ipynb  Tarea 3.1-EjercicioRDDs.ipynb  Tarea 3.2-Ejercicio DataFrame.ipynb  ejemploTweets.js  libro.txt
Tema1/: README.md  map_reducer.py  word_count.txt
