[tool.poetry]
name = "big-data-programacion"
version = "1.0"
description = ""
authors = ["i42metoj@uco.es"]

[tool.poetry.dependencies]
python = ">=3.7.1 <3.10"
pandas="*"
numpy="*"
matplotlib="3.4.3"
black="22.3.0"
nltk="3.7"
pyspark="3.2.1"
ipykernel = "6.13.0"


[tool.poetry.dev-dependencies]
pytest = "^3.4"
autopep8 = "^1.6.0"
